fix(challenges): Add spacing between test-suite rows (#16491)
Closes #16484

--- a/common/app/routes/Challenges/challenges.less
+++ b/common/app/routes/Challenges/challenges.less
@@ -24,7 +24,7 @@
 .@{ns}-test-suite {
   margin-top: 10px;
   & .row {
-    margin: 0!important;
+    margin: 14px 0 0 0;
   }
 
   .big-icon {
